fix: cleaning up local sensor download dest should run once

--- a/roles/falcon_install/tasks/api.yml
+++ b/roles/falcon_install/tasks/api.yml
@@ -105,6 +105,7 @@
     state: absent
   changed_when: false
   delegate_to: localhost
+  run_once: true
   when: falcon_api_sensor_download_cleanup
 
 - name: CrowdStrike Falcon | Set full file download path (non-windows)
