--- a/roles/falcon_install/tasks/win_install.yml
+++ b/roles/falcon_install/tasks/win_install.yml
@@ -14,6 +14,6 @@
 
 - name: CrowdStrike Falcon | Remove tmp install directory (Windows)
   ansible.windows.win_file:
-    path: "{{ falcon_windows_tmp_dir }}"
+    path: "{{ falcon_windows_tmp_dir_stat.stat.path }}"
     state: absent
   changed_when: no
