chore: changelog updates

--- a/changelogs/fragments/add-locking.yml
+++ b/changelogs/fragments/add-locking.yml
@@ -1,2 +1,5 @@
 minor_changes:
-- sensor_download - adds the ability to lock files to prevent collision when downloading the sensor (https://github.com/CrowdStrike/ansible_collection_falcon/pull/569)
+  - sensor_download - adds the ability to lock files to prevent collision when downloading the sensor (https://github.com/CrowdStrike/ansible_collection_falcon/pull/569)
+
+bugfixes:
+  - falcon_install - fix issue with temp directories being random or non-existent (https://github.com/CrowdStrike/ansible_collection_falcon/pull/569)
