--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -661,3 +661,23 @@ releases:
     - paginate-kernel-support-info.yml
     - toggle-win-become.yml
     release_date: '2024-09-06'
+  4.7.0:
+    changes:
+      bugfixes:
+      - falcon_configure - Fix truthy condition for falcon_cid and falcon_provisioning_token
+        (https://github.com/CrowdStrike/ansible_collection_falcon/pull/565)
+      - falcon_install - fix issue with temp directories being random or non-existent
+        (https://github.com/CrowdStrike/ansible_collection_falcon/pull/569)
+      minor_changes:
+      - sensor_download - adds the ability to lock files to prevent collision when
+        downloading the sensor (https://github.com/CrowdStrike/ansible_collection_falcon/pull/569)
+      release_summary: '| Release Date: 2024-10-30
+
+        | `Release Notes: <https://github.com/CrowdStrike/ansible_collection_falcon/releases/tag/4.7.0>`__
+
+        '
+    fragments:
+    - 4.7.0.yml
+    - add-locking.yml
+    - fix-truthy-564.yml
+    release_date: '2024-10-30'
