--- a/roles/falcon_uninstall/tasks/win_uninstall.yml
+++ b/roles/falcon_uninstall/tasks/win_uninstall.yml
@@ -2,7 +2,7 @@
 - name: CrowdStrike Falcon | Find Windows installer in Package Cache
   ansible.windows.win_find:
     paths: C:\ProgramData\Package Cache
-    patterns: ^(WindowsSensor.*\.)(exe)$
+    patterns: ^((WindowsSensor|FalconSensor_Windows).*\.)(exe)$
     recurse: yes
     use_regex: yes
   register: falcon_win_sensor_cache
