fix(falcon_install): fixes issue with deleting sensor when running localhost
Fixes #578

This PR addresses the issue of prematurely deleting the downloaded
sensor file prior to installation. We have removed the logic to it's own
task file that runs at the end of the play.

--- a/roles/falcon_install/tasks/main.yml
+++ b/roles/falcon_install/tasks/main.yml
@@ -50,3 +50,10 @@
   block:
     - ansible.builtin.include_tasks: win_install.yml
       # noqa name[missing]
+
+- name: Cleanup block
+  when:
+    - falcon_install_method == "api"
+  block:
+    - ansible.builtin.include_tasks: cleanup.yml
+    # noqa name[missing]
