fix(falcon_configure): control aid generation wait time and logic
Fixes #583

This PR should address concerns about potential timeouts or "misfires"
around waiting for an AID to be generated on Linux systems (particularly
on Ubuntu 20.04). We've added two ways to help mitigate these issues:
1. Use variables to control the retries/delays. Default to 60 seconds
(6/10).
2. Use a block/rescue so that if the 1st attempt fails, we give it
another try before concluding that something is wrong. We fail with a
message that includes some troubleshooting steps.

--- a/roles/falcon_configure/defaults/main.yml
+++ b/roles/falcon_configure/defaults/main.yml
@@ -44,6 +44,16 @@ falcon_client_secret:
 #
 falcon_provisioning_token:
 
+######### Wait for AID generation #########
+# Number of retries to attempt when waiting to retrieve the Falcon Agent ID (AID)
+# after sensor restart.
+falcon_aid_retries: 6
+
+# Number of seconds to wait between retries when waiting to retrieve the Falcon Agent ID (AID)
+# after sensor restart.
+falcon_aid_delay: 10
+###########################################
+
 # Falcon requires that a master image remove the Falcon Agent ID (AID). This
 # ensures instances spun up from the master receive their own, unique,
 # Falcon Agent ID.
