update readme and tox

--- a/tox.ini
+++ b/tox.ini
@@ -24,4 +24,4 @@ commands =
 [testenv:pylint]
 deps = pylint
 commands =
-    bash -c 'find ./extensions/eda/plugins -name "*.py" -print0 | xargs -0 pylint --output-format=parseable -sn --disable R0801,E0401,C0103,R0913,R0902,R0903'
+    bash -c 'find ./extensions/eda/plugins -name "*.py" -print0 | xargs -0 pylint --output-format=parseable -sn --disable R0801,E0401,C0103,R0913,R0902,R0903,R0917'
