--- a/.github/workflows/win_falcon_install.yml
+++ b/.github/workflows/win_falcon_install.yml
@@ -67,7 +67,7 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
-          cache-dependency-path: '.github/workflows/win_falcon_install.yml'
+          cache-dependency-path: '.devcontainer/requirements.txt'
 
       - name: Install dependencies
         run: |
